--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
     <head>
         <title>youtube.com</title>
-        <link rel="stylesheet" href="/style/youtube.css">
-        <link rel="stylesheet" href="/style/head.css">
+        <link rel="stylesheet" href="style/youtube.css">
+        <link rel="stylesheet" href="style/head.css">
 
     </head>
     <body>
         <div class="head-div">
             <div class="left-section">
-                <div class="threebar-div"><img class="threebar-img" src="/image/threebar.svg" alt="there bar"></div>
-                <div><img class="youtubelogo-img" src="/image/youtubelogo.svg" alt="three bar"></div>
+                <div class="threebar-div"><img class="threebar-img" src="image/threebar.svg" alt="there bar"></div>
+                <div><img class="youtubelogo-img" src="image/youtubelogo.svg" alt="three bar"></div>
                 
             </div>
             <div class="middle-section">
